# st_launcher

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  appveyor64.yml
.github/workflows/: debug.yml
src/: main.cpp
src/launcher/: main.cpp  main.hpp  window.cpp  window.hpp
src/util/: log.cpp  log.hpp
src/widgets/: main_menu.cpp  main_menu.hpp
